# ch-stellar

./: .gitignore  Cargo.toml  Cross.toml  Makefile  README.md  docker-compose.yaml
.github/workflows/: release.yaml
config/: stellar_asset_id_function.xml  stellar_galexie_tip_function.xml  stellar_hash_transaction_function.xml  stellar_id_function.xml  stellar_rpc_function.xml  stellar_strkey_decode_function.xml  stellar_uint256_to_account_function.xml  stellar_unmux_function.xml  stellar_xdr_decode_function.xml
docs/: error_handling.md  json_rpc_client.md
docs/functions/: stellar_asset_id.md  stellar_hash_transaction.md  stellar_id.md  stellar_rpc.md  stellar_strkey_decode.md  stellar_transaction_hash.md  stellar_xdr_decode.md
docs/table_functions/: stellar_galexie.md
examples/queries/: accounts.sql  contract_data.sql  effects.sql  events.sql  galexie_sample.sql  ledgers.sql  liquidity_pools.sql  operations.sql  stellar_galexie_table_01.sql  stellar_galexie_table_02.sql  stellar_rpc_02.sql  stellar_rpc_table_01.sql  stellar_xdr_decode_01.sql  trades.sql  transactions.sql  truslines.sql
examples/queries/usage/: stellar_galexie_table_01.sql  stellar_galexie_table_02.sql  stellar_galexie_table_normalized_01.sql  stellar_galexie_tip.sql  stellar_hash_transaction.sql  stellar_id_01.sql  stellar_rpc_01.sql  stellar_rpc_03.sql  stellar_rpc_table_01.sql  stellar_rpc_table_02.sql  stellar_strkey_decode_01.sql  stellar_unmux.sql
examples/queries/use-cases/: accounts.sql  changes.sql  changes_normalized.sql  contract_data.sql  events.sql  events_normalized.sql  galexie_sample_mainnet.sql  galexie_sample_normalized_mainnet.sql  galexie_sample_testnet.sql  ledgers.sql  ledgers_normalized.sql  liquidity_pools.sql  operations.sql  operations_normalized.sql  trades.sql  trades_normalized.sql  transactions.sql  transactions_normalized.sql  trustlines.sql
scripts/: agx-install-udf-bundle.sh  install-udf-bundle.sh
src/: lib.rs  main.rs
src/arrow_ext/: mod.rs
src/cli/: mod.rs
src/cli/function/: mod.rs  stellar_asset_id.rs  stellar_galexie_tip.rs  stellar_hash_transaction.rs  stellar_id.rs  stellar_rpc.rs  stellar_strkey_decode.rs  stellar_uint256_to_account.rs  stellar_unmux.rs  stellar_xdr_decode.rs
src/cli/table_function/: mod.rs  stellar_galexie.rs  stellar_galexie_normalized.rs  stellar_rpc.rs
src/json_rpc/: concurrency_limit_layer.rs
src/stellar/: constants.rs  galexie.rs  galexie_cache.rs  galexie_config.rs  galexie_files.rs  galexie_ledgers.rs  galexie_tip.rs  hash.rs  id.rs  ledger_close_meta_ext.rs  mod.rs  normalized_ledger.rs  query_params_ext.rs  result.rs  utils.rs
tests/: integration.rs
tests/sql/: stellar_galexie.sql  stellar_galexie.tsv  stellar_id.sql  stellar_id.tsv  stellar_strkey_decode.sql  stellar_strkey_decode.tsv  stellar_unmux.sql  stellar_unmux.tsv  stellar_xdr_decode.sql  stellar_xdr_decode.tsv
