[package]
name = "ch_stellar"
version = "0.0.1"
edition = "2024"

[lib]
name = "ch_stellar"
path = "src/lib.rs"

[[bin]]
name = "ch-stellar"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
arrow = "57"
arrow-ipc = { version = "57", features = ["lz4"]}
clap = { version = "4", features = ["derive"]}
futures = "0.3"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "io-std", "io-util", "fs"] }
object_store = { version = "0.12", features = ["http", "aws"] }
url = "2"
itertools = "0.14"
thiserror = "2"
mimalloc = "0.1.47"
bytes = "1.10.1"
stellar-xdr = { version = "25", features = ["curr", "base64", "hex", "serde", "serde_json", "std"] }
async-compression = { version = "0.4", features = ["tokio", "zstd"] }
tokio-util = { version = "0.7", features = ["io", "io-util"] }
querystring = "1"
sha2 = "0.10"
hex = "0.4"
stellar-strkey = { version = "0.0.14", features = ["cli"] }
ch-udf-common = { git = "https://github.com/agnosticeng/ch-udf-common.git", branch = "main" }
farmhash = "1"
regex = "1.12.2"
serde = "1.0.228"
tokio-stream = { version = "0.1.18", features = ["sync"] }

[dev-dependencies]
rstest = "0.26"
